--- a/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_attention = reduce_attention_dist(attention_scores, \"concat\")#params.intermediary_task[\"attention\"][\"reducer\"])\n",
+    "reduced_attention = reduce_attention_dist(attention_scores, \"concat\")\n",
     "stacked_reduced_attention = torch.stack(reduced_attention).squeeze()\n",
     "dataset.add_data(stacked_reduced_attention, \"attention_dist\")\n",
     "dataset.shuffle_data()\n",
