from_pretrained set to False in attention experiment notebooks

--- a/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "attention_dataloader = dataset.return_dataloader() \n",
-    "attention_experiment = AttentionExperiment.initialize_attention_experiment(params.intermediary_task, params.dataset, verbose=True)"
+    "attention_experiment = AttentionExperiment.initialize_attention_experiment(params.intermediary_task, params.dataset, from_pretrained=False, verbose=True)"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_attention = reduce_attention_dist(attention_scores, \"concat\")\n",
+    "reduced_attention = reduce_attention_dist(attention_scores, params.intermediary_task[\"attention\"][\"reducer\"])\n",
     "stacked_reduced_attention = torch.stack(reduced_attention).squeeze()\n",
     "dataset.add_data(stacked_reduced_attention, \"attention_dist\")\n",
     "dataset.shuffle_data()\n",
