--- a/experiments/workshop_experiments/attention/small_data/concatenate_clark/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/concatenate_clark/experiment.ipynb
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "attention_dataloader = dataset.return_dataloader() \n",
-    "attention_experiment = AttentionExperiment.initialize_attention_experiment(params.intermediary_task, params.dataset, verbose=True)"
+    "attention_experiment = AttentionExperiment.initialize_attention_experiment(params.intermediary_task, params.dataset, from_pretrained=False, verbose=True)"
    ]
   },
   {
