--- a/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
@@ -6,18 +6,18 @@
    "source": [
     "## Averaging attention distributions 6, 7, and 8 using a GRU \n",
     "\n",
+    "NOTE: for all of the attention experiments we learn a GRU with an attention mechanism applied on top of the model.\n",
+    "\n",
     "We average together the 6th, 7th, and 8th attention distributions of the input. Our classification model is an LSTM that reads in the attention distribution for each word sequentially. In general the max sequence lenght is 80 which means that our model will read in 80 data points which are each 80 dimensional. \n",
     "\n",
     "\n",
     "#### Notes\n",
-    "* One remaining question is how can we experiment with different number of attention heads. In general the extract attention scores function seems to have some bugs that need ironing out - such as only being able to pass in a batch size of 1 into the extraction schema.\n",
-    "\n",
-    "* We also would like to eventually use a transformer architecture on top of the attention distributions"
+    "* One remaining question is how can we experiment with different number of attention heads. In general the extract attention scores function seems to have some bugs that need ironing out - such as only being able to pass in a batch size of 1 into the extraction schema.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +102,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06fc5138215d43b38a226df3102d94d7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "attention_scores = attention_experiment.extract_attention_scores(attention_dataloader)"
    ]
@@ -118,10 +140,7 @@
     "reduced_attention = reduce_attention_dist(attention_scores, params.intermediary_task[\"attention\"][\"reducer\"])\n",
     "stacked_reduced_attention = torch.stack(reduced_attention).squeeze()\n",
     "dataset.add_data(stacked_reduced_attention, \"attention_dist\")\n",
-    "dataset.shuffle_data()\n",
-    "print(\"reduced_attention[0].shape = {}\".format(reduced_attention[0].shape))\n",
-    "print(\"stacked_reduced_attention.shape = {}\".format(stacked_reduced_attention.shape))\n",
-    "dataset"
+    "dataset.shuffle_data()"
    ]
   },
   {
@@ -140,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,9 +170,109 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b7b7f2d84c6e4da3a9d06f1b68bd9899",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Cross Validation Iteration', max=5.0, style=ProgressStyle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='epochs', max=150.0, style=ProgressStyle(description_width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13562a8b22f849e3b60da5ccda66b730",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='epochs', max=150.0, style=ProgressStyle(description_width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "stats = run_bootstrapping(classification_experiment, dataset, params.final_task, num_bootstrap_iters=5, input_key=\"attention_dist\", label_key=\"bias_label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auc': [(0.9912035644297243, 0.9998556998556999), 0.9961363166259037],\n",
+       " 'accuracy': [(0.9584183673469387, 0.9989583333333333), 0.9751700680272108]}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "stats = run_bootstrapping(classification_experiment, dataset, params.final_task, num_bootstrap_iters=3, input_key=\"attention_dist\", label_key=\"bias_label\")"
+    "classification_experiment.save_model_weights(\"gru-attention.weights\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GRUClassifier(\n",
+       "  (gru): GRU(80, 40, num_layers=2, batch_first=True, dropout=0.1, bidirectional=True)\n",
+       "  (W1): Linear(in_features=80, out_features=512, bias=True)\n",
+       "  (W2): Linear(in_features=80, out_features=512, bias=True)\n",
+       "  (V): Linear(in_features=512, out_features=1, bias=True)\n",
+       "  (fc): Linear(in_features=160, out_features=1, bias=True)\n",
+       "  (relu): ReLU()\n",
+       ")"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classification_experiment.model"
    ]
   },
   {
