adding attention experiments - final version w/o hyperparamter tuning

--- a/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/average_clark/experiment.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13562a8b22f849e3b60da5ccda66b730",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,6 +212,55 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='epochs', max=150.0, style=ProgressStyle(description_width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='epochs', max=150.0, style=ProgressStyle(description_width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='epochs', max=150.0, style=ProgressStyle(description_width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -220,17 +269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'auc': [(0.9912035644297243, 0.9998556998556999), 0.9961363166259037],\n",
-       " 'accuracy': [(0.9584183673469387, 0.9989583333333333), 0.9751700680272108]}"
+       "{'auc': [(0.5589151983768779, 0.6937949679568672), 0.6149535496317069],\n",
+       " 'accuracy': [(0.6041666666666666, 0.6975127551020409), 0.6506377551020408]}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,38 +290,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "classification_experiment.save_model_weights(\"gru-attention.weights\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GRUClassifier(\n",
-       "  (gru): GRU(80, 40, num_layers=2, batch_first=True, dropout=0.1, bidirectional=True)\n",
-       "  (W1): Linear(in_features=80, out_features=512, bias=True)\n",
-       "  (W2): Linear(in_features=80, out_features=512, bias=True)\n",
-       "  (V): Linear(in_features=512, out_features=1, bias=True)\n",
-       "  (fc): Linear(in_features=160, out_features=1, bias=True)\n",
-       "  (relu): ReLU()\n",
-       ")"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classification_experiment.model"
    ]
   },
   {
