--- a/experiments/workshop_experiments/attention/small_data/average_last_4/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/average_last_4/experiment.ipynb
@@ -153,7 +153,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = run_bootstrapping(classification_experiment, dataset, params.final_task, num_bootstrap_iters=3, input_key=\"attention_dist\", label_key=\"bias_label\")"
+    "stats = run_bootstrapping(classification_experiment, dataset, params.final_task, num_bootstrap_iters=5, input_key=\"attention_dist\", label_key=\"bias_label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auc': [(0.49547566051325453, 0.5904381590692956), 0.5478104896297601],\n",
+       " 'accuracy': [(0.5674744897959183, 0.6714285714285715), 0.6252551020408164]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classification_experiment.save_model_weights(\"gru-attention.weights\")"
    ]
   },
   {
