--- a/experiments/workshop_experiments/attention/small_data/concatenate_clark/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/concatenate_clark/experiment.ipynb
@@ -153,7 +153,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = run_bootstrapping(classification_experiment, dataset, params.final_task, num_bootstrap_iters=3, input_key=\"attention_dist\", label_key=\"bias_label\")"
+    "stats = run_bootstrapping(classification_experiment, dataset, params.final_task, num_bootstrap_iters=5, input_key=\"attention_dist\", label_key=\"bias_label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auc': [(0.49008805253703214, 0.6108219716458012), 0.5399686411361081],\n",
+       " 'accuracy': [(0.5920280612244898, 0.6428571428571429), 0.61875]}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
    ]
   },
   {
@@ -161,7 +182,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "classification_experiment.save_model_weights(\"gru-attention.weights\")"
+   ]
   }
  ],
  "metadata": {
