--- a/experiments/workshop_experiments/attention/small_data/sum_clark/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/sum_clark/experiment.ipynb
@@ -158,10 +158,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auc': [(0.58462853200414, 0.6357781846390868), 0.6082170820317657],\n",
+       " 'accuracy': [(0.5827593537414966, 0.6932291666666668), 0.627905328798186]}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "classification_experiment.save_model_weights(\"gru-attention.weights\")"
+   ]
   }
  ],
  "metadata": {
