--- a/experiments/workshop_experiments/attention/small_data/sum_last_4/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/sum_last_4/experiment.ipynb
@@ -158,10 +158,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auc': [(0.43178697525813764, 0.5809352023637738), 0.4983670299107961],\n",
+       " 'accuracy': [(0.6086522108843536, 0.693877551020408), 0.6639739229024944]}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "classification_experiment.save_model_weights(\"gru-attention.weights\")"
+   ]
   }
  ],
  "metadata": {
