--- a/experiments/workshop_experiments/attention/small_data/concatenate_last_4/experiment.ipynb
+++ b/experiments/workshop_experiments/attention/small_data/concatenate_last_4/experiment.ipynb
@@ -153,7 +153,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats = run_bootstrapping(classification_experiment, dataset, params.final_task, num_bootstrap_iters=3, input_key=\"attention_dist\", label_key=\"bias_label\")"
+    "stats = run_bootstrapping(classification_experiment, dataset, params.final_task, num_bootstrap_iters=5, input_key=\"attention_dist\", label_key=\"bias_label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'auc': [(0.4524140163452731, 0.6318127447215716), 0.5606708856460056],\n",
+       " 'accuracy': [(0.5918367346938777, 0.663265306122449), 0.629124149659864]}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classification_experiment.save_model_weights(\"gru-attention.weights\")"
    ]
   },
   {
