--- a/experiments/workshop_experiments/baselines/small_data/random/experiment.ipynb
+++ b/experiments/workshop_experiments/baselines/small_data/random/experiment.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -140,13 +140,13 @@
        "0.5"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "roc_auc_score(labels.numpy(), predictions.numpy())"
+    "roc_auc_score(labels, predictions)"
    ]
   },
   {
